--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">Basic Information</div>
-            <div class="row">
+           <!-- <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">DATE OF BIRTH:</strong></div>
               <div class="col-sm-8">14 APRIL 1995</div>
-            </div>
+            </div> -->
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
               <div class="col-sm-8">akshaykhirolkar@gmail.com</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+91-9970254556</div>
+              <div class="col-sm-8">+91-XXXXXXXXXX</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">140, Jijamata Nagar, Buldhana, Maharashtra, India.</div>
+              <div class="col-sm-8">Buldhana, Maharashtra, India.</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -198,7 +198,7 @@
             <div class="h5" <p style="color:red;">On Site Experience</p> </div>
             <p>Handled Production Support along with UAT support activities.<br>
 								Worked with Israel SRE Team to maintain Stable production. <br>
-								Handler Production release. </p>
+								Handled Production release. </p>
           </div>
         </div>
       </div>
@@ -214,8 +214,10 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">INNOVATIVE TOOL :</div>
-            <p>Developed  Compensation Off Tracking tool to track extra working of Employee on Weekends.<br>
-            	Considering Covid pandamic Site support was Off so Employee need to work on Weekends too to track such overtime work developed too apart from office work.
+            <p>Developed  Compensation Off tool to track extra working of Employee on Weekends.<br>
+            	Covid pandemic restricted site support, we needed  local support to  work on weekend as well,
+                 tool was developed to track such overtime work.  This tool which will be later use to compensate to approve leaves / to track overtime
+
 								<br>Technology : Microsoft Flows.</p>
           </div>
         </div>
