--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="h5">INNOVATIVE TOOL :</div>
             <p>Developed  Compensation Off tool to track extra working of Employee on Weekends.<br>
             	Covid pandemic restricted site support, we needed  local support to  work on weekend as well,
-                 tool was developed to track such overtime work.  This tool which will be later use to compensate to approve leaves / to track overtime
+                 tool was developed to track such overtime work.  This tool which will be later use to compensate to approve leaves.
 
 								<br>Technology : Microsoft Flows.</p>
           </div>
