--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">INNOVATIVE TOOL :</div>
+            <div class="h5">Innovative Tool :</div>
             <p>Developed  Compensation Off tool to track extra working of Employee on Weekends.<br>
             	Covid pandemic restricted site support, we needed  local support to  work on weekend as well,
                  tool was developed to track such overtime work.  This tool which will be later use to compensate to approve leaves.
